<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>edu.cornell.weill.reciter</groupId>
    <artifactId>reciter-identity-model</artifactId>
    <version>3.0.2</version>
	<packaging>jar</packaging>
    <name>ReCiter-Identity-Model</name>
    <description>A set of classes representing an identity</description>
    <url>https://github.com/wcmc-its/ReCiter-Identity-Model</url>
    
    <organization>
		<url>https://github.com/wcmc-its</url>
		<name>Weill Cornell Medicine ITS</name>
	</organization>

	<licenses>
		<license>
			<name>The Apache License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Mahender Reddy Jangari</name>
			<email>mrj4001@med.cornell.edu</email>
			<organization>Weill Cornell Medicine ITS</organization>
			<organizationUrl>https://github.com/wcmc-its</organizationUrl>
			<timezone>GMT+5.5</timezone>
		</developer>
		<developer>
			<name>Sarbajit Dutta</name>
			<email>szd2013@med.cornell.edu</email>
			<organization>Weill Cornell Medicine ITS</organization>
			<organizationUrl>https://github.com/wcmc-its</organizationUrl>
			<timezone>GMT-5</timezone>
		</developer>
	</developers>
    
    <scm>
		<connection>scm:git:git://github.com/wcmc-its/ReCiter-Identity-Model.git</connection>
		<developerConnection>scm:git:git@github.com:wcmc-its/ReCiter-Identity-Model.git</developerConnection>
		<url>https://github.com/wcmc-its/ReCiter-Identity-Model</url>
		<tag>3.0.2</tag>
	</scm>
    
    <properties>
        <version.maven-release-plugin>3.1.1</version.maven-release-plugin>
        <version.maven-gpg-plugin>3.2.7</version.maven-gpg-plugin>
        <version.maven-source-plugin>3.4.0</version.maven-source-plugin>
		<version.maven-javadoc-plugin>3.11.2</version.maven-javadoc-plugin>
		<version.maven-scm-provider-gitexe>2.1.0</version.maven-scm-provider-gitexe>
    	<!-- Generic properties -->
		<java.version>17</java.version>
		<corretto.version>17</corretto.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
	</properties>
	
	 <repositories>
    <repository>
      <id>sonatype-public</id>
      <url>https://s01.oss.sonatype.org/content/groups/public/</url>
    </repository>
  </repositories>

  <pluginRepositories>
    <pluginRepository>
      <id>sonatype-plugins</id>
      <url>https://s01.oss.sonatype.org/content/groups/public/</url>
    </pluginRepository>
  </pluginRepositories>
    <build>
        <sourceDirectory>src</sourceDirectory>
		<plugins>
			<!-- Apply the plugin directly here -->
			<plugin>
			  <groupId>org.sonatype.central</groupId>
			  <artifactId>central-publishing-maven-plugin</artifactId>
			  <version>0.8.0</version>
			  <extensions>true</extensions>
			  <configuration>
				<publishingServerId>central</publishingServerId>
			  </configuration>
			</plugin>
			<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>${version.maven-source-plugin}</version>
					<executions>
					<execution>
					<id>attach-sources</id>
					<phase>package</phase>
					<goals>
					<goal>jar</goal>
					</goals>
					</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>${version.maven-javadoc-plugin}</version>
					<configuration>
						<encoding>UTF-8</encoding>
					</configuration>
					<executions>
						<execution>
							<id>attach-javadoc</id>
							<phase>package</phase> 
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
		 </plugins>
				
        <pluginManagement>
	        <plugins>
	            <plugin>
	                <artifactId>maven-compiler-plugin</artifactId>
	                <version>3.13.0</version>
	                <configuration>
	                    <encoding>UTF-8</encoding>
						<source>${java.version}</source>
						<target>${java.version}</target>
						<showDeprecation>true</showDeprecation>
	                </configuration>
	            </plugin>
	            <plugin>
	                <artifactId>maven-deploy-plugin</artifactId>
	                <version>3.1.3</version>
	                <executions>
						<execution>
							<id>default-deploy</id>
							<phase>deploy</phase>
							<goals>
								<goal>deploy</goal>
							</goals>
						</execution>
					</executions>
	            </plugin>
	            <plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-release-plugin</artifactId>
					<version>${version.maven-release-plugin}</version>
					<configuration>
						<localCheckout>true</localCheckout>
						<pushChanges>false</pushChanges>
						<mavenExecutorId>forked-path</mavenExecutorId>
						<arguments>-Dgpg.passphrase=${gpg.passphrase}</arguments>
					</configuration>
					<dependencies>
						<dependency>
							<groupId>org.apache.maven.scm</groupId>
							<artifactId>maven-scm-provider-gitexe</artifactId>
							<version>${version.maven-scm-provider-gitexe}</version>
						</dependency>
					</dependencies>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-source-plugin</artifactId>
					<version>${version.maven-source-plugin}</version>
					<executions>
					<execution>
					<id>attach-sources</id>
					<goals>
					<goal>jar</goal>
					</goals>
					</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-javadoc-plugin</artifactId>
					<version>${version.maven-javadoc-plugin}</version>
					<configuration>
						<encoding>UTF-8</encoding>
					</configuration>
					<executions>
						<execution>
							<id>attach-javadoc</id>
							<goals>
								<goal>jar</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.sonatype.plugins</groupId>
					<artifactId>nexus-staging-maven-plugin</artifactId>
					<version>1.6.7</version>
					<extensions>true</extensions>
					<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
					</configuration>
				</plugin>
	        </plugins>
        </pluginManagement>
    </build>
    <dependencies>
		<dependency>
			<groupId>software.amazon.awssdk</groupId>
			<artifactId>dynamodb</artifactId>
			<version>2.29.26</version> 
		</dependency>
		<dependency>
			<groupId>software.amazon.awssdk</groupId>
			<artifactId>dynamodb-enhanced</artifactId>
			<version>2.29.26</version> 
		</dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.32</version>
            <scope>provided</scope>
        </dependency>
			<dependency>
				<groupId>com.fasterxml.jackson.core</groupId>
				<artifactId>jackson-annotations</artifactId>
				<version>2.22</version>
			</dependency>
        
    </dependencies>
    
    <profiles>
		<!-- GPG Signature on release -->
		<profile>
			<id>release-sign-artifacts</id>
			<activation>
				<property>
					<name>performRelease</name>
					<value>true</value>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>${version.maven-gpg-plugin}</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
	<distributionManagement>
        <repository>
            <id>ossrh</id>
            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
    </distributionManagement>

</project>